@@ -1,3 +1,8 @@
+2007-08-05  Jb Evain  <jbevain@novell.com>
+
+	* Descriptors/smcs.xml, Makefile: add a descriptor
+	to protect some classes in smcs.
+
 2007-08-03  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* Makefile : a bit win32 friendly fix.
